don't allow a shard to be the TO of a migrate while its still cleaning up old data SERVER-1842